docs/sf-export/sfdx-raw/objects/Payment_Processor__c/Payment_Processor__c.object-meta.xml
<CustomObject>
    <label>Payment Processor</label>
    <nameField>
        <label>Payment Processor Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Payment Processors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>