docs/sf-export/sfdx-raw/objects/Payment_Processor__c/fields/Bank_Setup_Fee__c.field-meta.xml
<CustomField>
    <fullName>Bank_Setup_Fee__c</fullName>
    <label>Bank Setup Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>