docs/sf-export/sfdx-raw/objects/Payment_Processor__c/fields/Default_Processor__c.field-meta.xml
<CustomField>
    <fullName>Default_Processor__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Default Processor</label>
    <type>Checkbox</type>
</CustomField>