docs/sf-export/sfdx-raw/objects/Payment_Processor__c/fields/Monthly_Bank_Fee__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Bank_Fee__c</fullName>
    <label>Monthly Bank Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>