docs/sf-export/sfdx-raw/objects/Payment_Processor__c/fields/Processor_Type__c.field-meta.xml
<CustomField>
    <fullName>Processor_Type__c</fullName>
    <label>Processor Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SAS</fullName>
            </value>
            <value>
                <fullName>RAM</fullName>
            </value>
            <value>
                <fullName>LAPP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>