docs/sf-export/sfdx-raw/objects/Payment_Processor__c/fields/Program_Fee_Payee_Id__c.field-meta.xml
<CustomField>
    <fullName>Program_Fee_Payee_Id__c</fullName>
    <label>Program Fee Payee Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>