docs/sf-export/sfdx-raw/objects/Payment_Processor__c/fields/Retainer_Fee_Payee_Id__c.field-meta.xml
<CustomField>
    <fullName>Retainer_Fee_Payee_Id__c</fullName>
    <label>Retainer Fee Payee Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>