docs/sf-export/sfdx-raw/objects/Payment_Processor__c/fields/Service_Fee_Payee_Id__c.field-meta.xml
<CustomField>
    <fullName>Service_Fee_Payee_Id__c</fullName>
    <label>Service Fee Payee Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>