docs/sf-export/sfdx-raw/objects/Payment_Processor__c/fields/Setup_Fee_Payee_Id__c.field-meta.xml
<CustomField>
    <fullName>Setup_Fee_Payee_Id__c</fullName>
    <label>Setup Fee Payee Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>