docs/sf-export/sfdx-raw/objects/Payment_Processor__c/fields/Wire_Settlement_Fee__c.field-meta.xml
<CustomField>
    <fullName>Wire_Settlement_Fee__c</fullName>
    <label>Wire Settlement Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>